--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>10/08/02</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (girl, 4)</b><br>Region of origin: <b>Comoros</b><br>Cause of death: <b>reportedly drowned after shipwreck near Mayotte (FR)</b><br>Source: EP<br>
+Found dead: <b>10/07/14</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (newborn)</b><br>Region of origin: <b>Syria</b><br>Cause of death: <b>premature birth on train platform during expulsion from Switzerland to Italy</b><br>Source: Vivre<br>
 
 <br>
 
