--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>23/09/03</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Vullnet Bytyci (man, 18)</b><br>Region of origin: <b>Albania</b><br>Cause of death: <b>shot to death by border guard while trying to cross Albanian-Greek border</b><br>Source: AI<br>
+Found dead: <b>20/07/08</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (girl, 3)</b><br>Region of origin: <b>Nigeria</b><br>Cause of death: <b>died of starvation while travelling to Italy, body thrown overboard</b><br>Source: Reu.<br>
 
 <br>
 
