--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>21/08/14</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Abdelhak Goradia (man, 51)</b><br>Region of origin: <b>Algeria</b><br>Cause of death: <b>died from violent treatment by police on way to be deported from Charles de Gaulles airport (FR) to Algeria</b><br>Source: MNS/OpenDem/Paris-luttes<br>
+Found dead: <b>05/01/05</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Africa</b><br>Cause of death: <b>died of exhaustion, found on beach in Fuerteventura (ES)</b><br>Source: ANA/APDHA/NOB<br>
 
 <br>
 
