--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>17/04/04</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Asia</b><br>Cause of death: <b>stowaway, shot by police after van failed to stop at Hungarian-Slovak border</b><br>Source: MNS<br>
+Found dead: <b>25/04/94</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (woman)</b><br>Region of origin: <b>Romania</b><br>Cause of death: <b>drowned in the Neisse River near Rothenburg (DE) trying to cross Polish-German border</b><br>Source: ARI/BGS/ZAG<br>
 
 <br>
 
