--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>15/04/97</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man)</b><br>Region of origin: <b>Senegal</b><br>Cause of death: <b>died in hospital after being found with hypothermia and frostbite near Deutschneudorf (DE)</b><br>Source: ARI/ZAG<br>
+Found dead: <b>21/03/01</b><br>Number of person: <b>3</b><br>Name, gender, age: <b>N.N. (2 women; 1 man)</b><br>Region of origin: <b>Maghreb</b><br>Cause of death: <b>drowned in boat crash, bodies washed ashore near Tarifa (ES)</b><br>Source: MNS/DiarioVasco/GARA<br>
 
 <br>
 
