--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>01/10/05</b><br>Number of person: <b>17</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>3 drowned after boat capsized off Fuerteventura (ES) during rescue attempt; 14 missing</b><br>Source: ST/MUGAK/ABC/Raz<br>
+Found dead: <b>08/07/95</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (woman)</b><br>Region of origin: <b>Peru</b><br>Cause of death: <b>hit by train in the French Alps near Menton (FR) while walking on tracks to Italy</b><br>Source: Libération/MNS<br>
 
 <br>
 
