--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>01/10/03</b><br>Number of person: <b>3</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Guinea</b><br>Cause of death: <b>drowned after jumping overboard off coast of Le Havre (FR)</b><br>Source: NOB<br>
+Found dead: <b>28/09/13</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (young man)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>found dead near Sidi Lakhdar (DZ); body had been at sea for months</b><br>Source: QUOTI<br>
 
 <br>
 
