--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>19/04/15</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Africa</b><br>Cause of death: <b>shot by smuggler and thrown overboard after standing up without permission near Gergarish (LY)</b><br>Source: VK<br>
+Found dead: <b>10/10/02</b><br>Number of person: <b>2</b><br>Name, gender, age: <b>N.N. (2 women)</b><br>Region of origin: <b>Nigeria</b><br>Cause of death: <b>drowned after ship capsized off western coast of Turkey on way to Greece</b><br>Source: AFP<br>
 
 <br>
 
