--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>12/12/09</b><br>Number of person: <b>2</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>reportedly drowned after boat sank off coast of Leros (GR); 25 rescued</b><br>Source: NOB/TodZam<br>
+Found dead: <b>05/10/08</b><br>Number of person: <b>4</b><br>Name, gender, age: <b>N.N. (1 boy; 3 men)</b><br>Region of origin: <b>Iraq</b><br>Cause of death: <b>bodies found between the Evros River delta and Port of Alexandroupoli (GR)</b><br>Source: NOB/KI<br>
 
 <br>
 
