--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>04/08/00</b><br>Number of person: <b>6</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Comoros</b><br>Cause of death: <b>drowned in shipwreck trying to reach Mayotte (FR)</b><br>Source: Mayotte sans frontières<br>
+Found dead: <b>14/10/04</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man)</b><br>Region of origin: <b>Egypt, Pakistan</b><br>Cause of death: <b>reportedly drowned after boat capsized 70 miles from Malta</b><br>Source: MP/ST<br>
 
 <br>
 
