--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>15/09/17</b><br>Number of person: <b>3</b><br>Name, gender, age: <b>N.N. (1 child, 3; 1 woman; 1 man)</b><br>Region of origin: <b>Cameroon</b><br>Cause of death: <b>found dead on rubber dinghy during rescue operation 44 km off coast of Tripoli (LY); 139 rescued</b><br>Source: DefenceForcesIRL/IOM/RCItaly<br>
+Found dead: <b>07/04/93</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Zaire</b><br>Cause of death: <b>shot point blank during interrogation at police station in Paris (FR)</b><br>Source: Le Monde/MNS<br>
 
 <br>
 
