--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>06/06/96</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Jude Akubakar (16)</b><br>Region of origin: <b>Sierra Leone</b><br>Cause of death: <b>drowned in Hamburg (DE) while fleeing people he assumed to be police</b><br>Source: ND/OL/FR-H/ARI/ZAG<br>
+Found dead: <b>Nov 15</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>shot by stray bullet from border police while trying to cross Turkish-Bulgarian border with 50 others</b><br>Source: Imkander<br>
 
 <br>
 
