--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>05/08/06</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man)</b><br>Region of origin: <b>North Africa</b><br>Cause of death: <b>found by police officer on Caleta del Mero beach (ES)</b><br>Source: TS/APDHA<br>
+Found dead: <b>03/06/14</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man)</b><br>Region of origin: <b>Afghanistan</b><br>Cause of death: <b>body washed ashore on northeast coast of Lesbos (GR)</b><br>Source: Lesbosnews<br>
 
 <br>
 
