--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>17/03/18</b><br>Number of person: <b>19</b><br>Name, gender, age: <b>N.N. (9 children)</b><br>Region of origin: <b>Afghanistan, Iraq</b><br>Cause of death: <b>16 drowned after migrant boat capsized off coast of Agathonisi (GR); 3 missing, 3 rescued</b><br>Source: HellCoastG/IOM Greece/Reu./AP/ChNewsAsia<br>
+Found dead: <b>13/02/18</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Ayse Abdulrezzak (woman, 37)</b><br>Region of origin: <b>Turkey</b><br>Cause of death: <b>drowned when boat sunk in the Evros River on Turkish-Greek border; teacher fleeing crackdown in Turkey</b><br>Source: Reu./TDEMD/IOMTurkey/TurkeyPurge/TRMinute<br>
 
 <br>
 
