--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>04/05/08</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Hamidur Rahman (man, 31)</b><br>Region of origin: <b>Bangladesh</b><br>Cause of death: <b>suicide, overdosed on antidepressants in Birkenfeld (DE) after asylum claim was rejected</b><br>Source: ARI<br>
+Found dead: <b>2009</b><br>Number of person: <b>20</b><br>Name, gender, age: <b>N.N. (mostly children)</b><br>Region of origin: <b>Africa</b><br>Cause of death: <b>died in a fire in unsafe building in Paris (FR), inhabited by many immigrants with no other choice of accommodation</b><br>Source: SurprisingE<br>
 
 <br>
 
