--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>Feb 02</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man)</b><br>Region of origin: <b>Kurdistan</b><br>Cause of death: <b>stowaway, suffocated in container while travelling from Greece to northern Italy</b><br>Source: NW<br>
+Found dead: <b>23/05/17</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man)</b><br>Region of origin: <b>Senegal</b><br>Cause of death: <b>stowaway, found electrocuted on train from Italy at Cannes-La Bocca station (FR)</b><br>Source: GazzettaMezzo/IOM/MMP<br>
 
 <br>
 
