--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>Apr 98</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Romania</b><br>Cause of death: <b>stowaway, drowned in the Ostsee River (DE) after jumping off ship</b><br>Source: ARI/ZAG<br>
+Found dead: <b>03/04/09</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Zivko Kosanovic (man, 49)</b><br>Region of origin: <b>Serbia</b><br>Cause of death: <b>shot dead in his hometown Sid (RS) after deportation from the Netherlands</b><br>Source: VPRO<br>
 
 <br>
 
