--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>29/01/08</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>stowaway, body found in ship that had travelled from Patras (GR) to Venice (IT)</b><br>Source: KI/NOB<br>
+Found dead: <b>Dec 98</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Lin Yan-Guang (man, 35)</b><br>Region of origin: <b>China</b><br>Cause of death: <b>suicide in hospital in Brentwood (GB), asylum seeker suffering depression</b><br>Source: CARF/IRR/NCADC<br>
 
 <br>
 
