--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>Jun 08</b><br>Number of person: <b>6</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Somalia</b><br>Cause of death: <b>drowned after boat sank due to stormy weather near Malta</b><br>Source: LR/SD<br>
+Found dead: <b>17/01/13</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Shehzad Luqman (man, 27)</b><br>Region of origin: <b>Pakistan</b><br>Cause of death: <b>stabbed by 2 Golden Dawn members on motorbike in Athens (GR)</b><br>Source: Reu./MNS/KTG/CS<br>
 
 <br>
 
