--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>17/01/13</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Shehzad Luqman (man, 27)</b><br>Region of origin: <b>Pakistan</b><br>Cause of death: <b>stabbed by 2 Golden Dawn members on motorbike in Athens (GR)</b><br>Source: Reu./MNS/KTG/CS<br>
+Found dead: <b>01/01/07</b><br>Number of person: <b>3</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Sub-Saharan Africa</b><br>Cause of death: <b>died of starvation on boat docked in Canary Islands (ES), 2 bodies thrown overboard</b><br>Source: FE/ELM/MNS<br>
 
 <br>
 
