--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>30/04/18</b><br>Number of person: <b>6</b><br>Name, gender, age: <b>N.N. (1 baby; 5 men)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>bodies recovered in Zuwara (LY)</b><br>Source: IOM Libya<br>
+Found dead: <b>27/06/97</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>killed in bus accident after German/Polish authorities forced their return</b><br>Source: FFM/Pro Asyl/FR/MNS/ZAG<br>
 
 <br>
 
